# benchmark_dot_product_rust

./: Cargo.toml  README.md
src/: dot_prod.rs  main.rs
