[package]
name = "benchmark_dot_product_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
packed_simd = { version = "0.3.7", package = "packed_simd_2" }

[lib]
name = "dot_prod"           # The name of the target.
path = "src/dot_prod.rs" 